# perf_counter

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  list_all_events.c  perf_avx2_fma.cpp
include/: perf_counter.h
src/: perf_counter.c
